# enrolment-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: data.py
app/db/: __init__.py  connection.py  crud.py  models.py  student.py
app/routes/: __init__.py  enroll.py  semester.py  student.py
enrolment_system/db/: db.py  models.py  schema.py
tests/: test_enrolment_system.py
