[tool.poetry]
name = "enrolment-system"
version = "0.1.0"
description = "Class Enrolment System"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
SQLAlchemy = "^1.4.36"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
